--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@
         <form class="form" data-contact-form>
           <div class="field">
             <label>Your name</label>
-            <input name="name" placeholder="e.g., Zia" required />
+            <input name="name" placeholder="e.g., Ali" required />
           </div>
 
           <div class="field">
