--- a/contact.html
+++ b/contact.html
@@ -19,6 +19,7 @@
 
       <nav class="menu" data-menu>
         <a href="offerings.html"><span data-i18n="nav.offerings">Offerings<span class="ur" style="display:none; direction:rtl;">سہولیات</span></span></a>
+        <a href="cost-effective.html"><span data-i18n="nav.cost">Why Cost-Effective<span class="ur" style="display:none; direction:rtl;">کم لاگت کیوں</span></span></a>
         <a href="investment.html"><span data-i18n="nav.investment">Investment<span class="ur" style="display:none; direction:rtl;">سرمایہ کاری</span></span></a>
         <a href="updates.html"><span data-i18n="nav.updates">Updates<span class="ur" style="display:none; direction:rtl;">تازہ اپڈیٹس</span></span></a>
         <a href="contact.html"><span data-i18n="nav.contact">Contact<span class="ur" style="display:none; direction:rtl;">رابطہ</span></span></a>
@@ -95,6 +96,7 @@
       <div class="pills">
         <a href="index.html">Home</a>
         <a href="offerings.html">Offerings<span class="ur" style="display:none; direction:rtl;">سہولیات</span></a>
+        <a href="cost-effective.html">Why Cost-Effective<span class="ur" style="display:none; direction:rtl;">کم لاگت کیوں</span></a>
         <a href="investment.html">Investment<span class="ur" style="display:none; direction:rtl;">سرمایہ کاری</span></a>
         <a href="updates.html">Updates<span class="ur" style="display:none; direction:rtl;">تازہ اپڈیٹس</span></a>
       </div>
