--- a/updates.html
+++ b/updates.html
@@ -21,6 +21,7 @@
 
       <nav class="menu" data-menu>
         <a href="offerings.html"><span data-i18n="nav.offerings">Offerings<span class="ur" style="display:none; direction:rtl;">سہولیات</span></span></a>
+        <a href="cost-effective.html"><span data-i18n="nav.cost">Why Cost-Effective<span class="ur" style="display:none; direction:rtl;">کم لاگت کیوں</span></span></a>
         <a href="investment.html"><span data-i18n="nav.investment">Investment<span class="ur" style="display:none; direction:rtl;">سرمایہ کاری</span></span></a>
         <a href="updates.html"><span data-i18n="nav.updates">Updates<span class="ur" style="display:none; direction:rtl;">تازہ اپڈیٹس</span></span></a>
         <a href="contact.html"><span data-i18n="nav.contact">Contact<span class="ur" style="display:none; direction:rtl;">رابطہ</span></span></a>
@@ -41,7 +42,7 @@
       <div class="hr"></div>
 
       <div class="card card-pad">
-        <!-- LightWidget WIDGET --><script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script><iframe src="https://cdn.lightwidget.com/widgets/7ed86e2e1e505002ae5ca9165a58479e.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width:100%;border:0;overflow:hidden;"></iframe>
+        <!-- LightWidget WIDGET --><script src="https://cdn.lightwidget.com/widgets/lightwidget.js"></script><iframe src="http://lightwidget.com/widgets/7ed86e2e1e505002ae5ca9165a58479e.html" scrolling="no" allowtransparency="true" class="lightwidget-widget" style="width:100%;border:0;overflow:hidden;"></iframe>
       </div>
 
      
@@ -61,6 +62,7 @@
       <div class="pills">
         <a href="index.html">Home</a>
         <a href="offerings.html">Offerings<span class="ur" style="display:none; direction:rtl;">سہولیات</span></a>
+        <a href="cost-effective.html">Why Cost-Effective<span class="ur" style="display:none; direction:rtl;">کم لاگت کیوں</span></a>
         <a href="investment.html">Investment<span class="ur" style="display:none; direction:rtl;">سرمایہ کاری</span></a>
         <a href="contact.html">Contact<span class="ur" style="display:none; direction:rtl;">رابطہ</span></a>
       </div>
