--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
   <title>Contact<span class="ur" style="display:none; direction:rtl;">رابطہ</span> — Alizai Farms</title>
   <meta name="description" content="Alizai Farms on WhatsApp for Qurbani installments, value animals, or livestock investment." />
   <link rel="stylesheet" href="assets/styles.css" />
+  <link rel="icon" href="favicon.ico" sizes="any" />
 </head>
 <body>
   <header class="nav">
