--- a/cost-effective.html
+++ b/cost-effective.html
@@ -6,6 +6,7 @@
   <title>Why Alizai Farms is Cost-Effective — Alizai Farms</title>
   <meta name="description" content="Learn how Alizai Farms keeps Eid animals cost-effective through direct farm sourcing, optimized feeding, and transparent pricing." />
   <link rel="stylesheet" href="assets/styles.css" />
+  <link rel="icon" href="favicon.ico" sizes="any" />
 </head>
 <body>
   <header class="nav">
