--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Alizai Farms — Healthy Livestock • Ethical Farming • Transparent Process</title>
   <meta name="description" content="Alizai Farms provides Qurbani on installments, cost-effective healthy Eid animals, and livestock investment opportunities in Pakistan." />
   <link rel="stylesheet" href="assets/styles.css" />
+  <link rel="icon" href="favicon.ico" sizes="any" />
 </head>
 <body>
   <header class="nav">
