--- a/investment.html
+++ b/investment.html
@@ -6,6 +6,7 @@
   <title>Investment<span class="ur" style="display:none; direction:rtl;">سرمایہ کاری</span> — Alizai Farms</title>
   <meta name="description" content="Livestock investment models: profit share, fixed seasonal, and asset ownership." />
   <link rel="stylesheet" href="assets/styles.css" />
+  <link rel="icon" href="favicon.ico" sizes="any" />
 </head>
 <body>
   <header class="nav">
