--- a/offerings.html
+++ b/offerings.html
@@ -6,6 +6,7 @@
   <title>Offerings<span class="ur" style="display:none; direction:rtl;">سہولیات</span> — Alizai Farms</title>
   <meta name="description" content="Qurbani on installments and cost-effective healthy Eid animals." />
   <link rel="stylesheet" href="assets/styles.css" />
+  <link rel="icon" href="favicon.ico" sizes="any" />
 </head>
 <body>
   <header class="nav">
